# jaraco.mongodb

./: .flake8  .hgignore  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  azure-pipelines.yml  conftest.py  mongooplog_alt.py  mypy.ini  oplog.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst
jaraco/mongodb/: check-gridfs.py  cli.py  codec.py  compat.py  diff.py  fields.py  fixtures.py  helper.py  insert-doc.py  install.py  manage.py  migration.py  monitor-index-creation.py  move-gridfs.py  oplog.py  pmxbot.py  query.py  repair-gridfs.py  sampling.py  service.py  sessions.py  sharding.py  testing.py  timers.py  uri.py  workarounds.py
jaraco/mongodb/tests/: conftest.py  test_compat.py  test_diff.py  test_fields.py  test_insert_doc.py  test_manage.py  test_oplog.py  test_service.py  test_sessions.py  test_testing.py
newsfragments/: +.feature.rst  +12748811.removal.rst  +32.bugfix.rst  +35.feature.rst  +3bee3e37.bugfix.rst  +bd29ab8a.feature.rst  +f0945baa.bugfix.rst  28.feature.1.rst  28.feature.rst  34.bugfix.rst  43.feature.rst  44.feature.rst
tests/: basic-01.js  oplog.js  requirements.txt  suite.js  test_compat.py  test_manage.py  test_oplog.py  test_service.py  test_sessions.py
