[metadata]
license_files =
	LICENSE
name = jaraco.mongodb
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Routines and classes supporting MongoDB environments
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.mongodb
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Pytest


[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	pymongo>=3.0
	python-dateutil
	jaraco.services>=2
	portend
	jaraco.itertools>=2
	jaraco.functools>=2
	jaraco.ui>=2
	jaraco.context>=2
	more_itertools
	jaraco.logging>=2
	tempora
	pytimeparse
	jaraco.collections>=2
	future-fstrings
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	pytest-enabler

	# local
	cherrypy

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local
	cherrypy

[options.entry_points]
pytest11 =
	MongoDB = jaraco.mongodb.fixtures
pmxbot_handlers =
	create in MongoDB shard = jaraco.mongodb.pmxbot
