[metadata]
name = jaraco.mongodb
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Routines and classes supporting MongoDB environments
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.mongodb
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Pytest


[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	pymongo>=3.5
	python-dateutil
	jaraco.services>=2
	portend
	jaraco.itertools>=2
	jaraco.functools>=2
	jaraco.ui>=2
	jaraco.context>=2
	more_itertools
	jaraco.logging>=2
	tempora
	pytimeparse
	jaraco.collections>=2
	importlib_metadata; python_version < "3.8"
	autocommand
	cachetools

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	cherrypy
	types-python-dateutil
	types-cachetools

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local
	cherrypy

[options.entry_points]
pytest11 =
	MongoDB = jaraco.mongodb.fixtures
pmxbot_handlers =
	create in MongoDB shard = jaraco.mongodb.pmxbot
